# actix-react-starter-template

./: .gitignore  .lintstagedrc.js  LICENCE  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: docker-image.yml  react.yml  rust.yml
api/: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  package.json
api/entity/: Cargo.toml
api/entity/src/: cake.rs  fruit.rs  lib.rs
api/migration/: Cargo.toml
api/migration/src/: m20220101_000001_create_table.rs
api/src/: context.rs  main.rs
api/src/routes/: cake.rs
api/src/services/: cake.rs
app/: .env.sample  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  api.ts  main.tsx
app/src/components/page/: Body.tsx  Header.tsx
app/src/pages/: About.tsx  Home.tsx
app/src/sagas/: index.ts
app/src/store/: apiStatus.ts  counter.ts  index.ts  store.d.ts  utils.ts
